syntax = "proto3";

package model;

message User {
	// Static info
	int64 Id = 1;
	string Email = 2;
	string PwdHash = 3;
	int32 MaxConn = 4;
	int64 CreatedTimestamp = 5;
	int64 ExpiredTimestamp = 6;
	bool IsEnabled = 7;
	repeated UserSession Sessions = 128;
	string AdminToken = 129;
}

message UserSession {
	string Token = 1;
	int64 Id = 2;
	int64 LoginTimestamp = 3;
	int64 Traffic = 4;
	string IP = 5;
}

message UserCredit {
	int64 Id = 1;
	int64 Credit = 2;
	int64 TopUpTimestamp = 3;

	string AdminToken = 128;
}

