syntax = "proto3";

package model;

message NullMessage {}